fdo#82076 RTF import: handle footnote in table cell

(cherry picked from commit 956c3ff3d43e1b181f7c91518edee1c7c4dc2a0a)

Change-Id: I69def7936c320e93db5d4504922d52346caaf9cf
Reviewed-on: https://gerrit.libreoffice.org/12242
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>